--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
   border: none;
   background-color: yellow;
   padding: 10px;
+  height: 100%;
+  width:100%;
+}
+li {
+  list-style: none;
 }
 header,
 h1,
